# Python_Dev_Challenge

./: .gitignore  pyproject.toml  readme.md  requirements.txt
core/: climates.py  dicount_codes.py  products.py
core/constants/: climates.py
tests/: run_tests.py  test_discount_codes.py  test_location.py  test_products.py
