[project]
name = "Python Dev Challenge"
version = ""
description = ""
authors = [
    {name = "Franco Sebastian Muñoz", email = "franco.mz92@hotmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "pandas>=1.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
test = "python ./tests/run_tests.py"